--- a/index.html
+++ b/index.html
@@ -252,10 +252,10 @@
   background: white;
   border-radius: 10px;
 
-  padding: 9px 10px;       /* 🔹 Hauteur réduite */
-  gap: 12px;
+  padding: 9px 9px;       /* 🔹 Hauteur réduite */
+  gap: 2px;
 
-  max-width: 1100px;         /* 🔹 Largeur réduite (cartes plus fines) */
+  max-width: 1000px;         /* 🔹 Largeur réduite (cartes plus fines) */
   margin:initial  ;         /* centre la carte */
 
   box-shadow: 0 4px 14px rgba(80, 0, 120, 0.10);
@@ -273,8 +273,8 @@
   width: 130px;
   height: 130px;
   object-fit: cover;
-  border-radius: 18px;
-  border: 4px solid #eadcff;
+  border-radius: 8px;
+  border: 0px solid #eadcff;
 }
 
 /* Info */
@@ -294,7 +294,7 @@
 .blender-actions {
   display:flex;
   flex-direction:column;
-  gap:12px;
+  gap:4px;
 }
 
 /* Buttons design */
@@ -348,7 +348,7 @@
 .render-img {
   width:100%;
   max-width:900px;
-  border-radius:18px;
+  border-radius:0px;
   margin-top:20px;
 }
 
@@ -392,7 +392,7 @@
 .render-img {
   width:100%;
   max-width:850px;
-  border-radius:22px;
+  border-radius:2px;
   box-shadow:0 12px 38px rgba(0,0,0,0.15);
 }
 
@@ -421,7 +421,7 @@
 }
 
 .img-normal {
-  width: 100%;
+  width: 90%;
   max-width: 700px;
   display: block;
   margin: auto;
@@ -695,8 +695,8 @@ fadeElements.forEach(el => observer.observe(el));
 const blenderProjects = [
   {
     name: "Robot Project",
-    img: "BlenderProjects/randerimagerobot.png",
-    blend: "BlenderProjects/robot2.blend",
+    img: "BlenderProjects/Render-Robot.png",
+    blend: "BlenderProjects/Robot-TP1.blend",
     pdf: "BlenderProjects/raportTP1.pdf"
   }
 ];
@@ -799,4 +799,3 @@ renderProjects();
 
 </body>
 </html>
-s
